updating with working portfolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
         <ul>
             <li>
-                <a href="https://www.ericryan.com">
+                <a href="https://eric-ryan-portfolio.herokuapp.com">
                     <img src="./img/iconmonstr-home-thin.svg" alt="Homepage">
                     Official Website
                 </a>
